Revert "updated footer"
This reverts commit 75fd9ac6c69d0c20d530e2c2f00658822a40e49b.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,56 +1,52 @@
 <footer class="footer footer-white">
-  <div class="col-lg-12">
-    <div class="container">
-      <a class="footer-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+  <div class="container">
+    <a class="footer-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
-      <ul class="pull-center">
-        <li>
-          <a href="{{ site.baseurl }}/#KnowAboutme">
-            <i class="material-icons">account_circle</i> About me
-          </a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}/#projects">
-            <i class="material-icons">apps</i> Portfolio
-          </a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}/#BlogPosts">
-            <i class="material-icons">view_quilt</i> Journey
-          </a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}/#ContactMyBot">
-            <i class="material-icons">chat_bubble</i> Contact Me
-          </a>
-        </li>
-      </ul>
+    <ul class="pull-center">
+      <li>
+        <a href="{{ site.baseurl }}/#KnowAboutme">
+          <i class="material-icons">account_circle</i> About me
+        </a>
+      </li>
+      <li>
+        <a href="{{ site.baseurl }}/#projects">
+          <i class="material-icons">apps</i> Portfolio
+        </a>
+      </li>
+      <li>
+        <a href="{{ site.baseurl }}/#BlogPosts">
+          <i class="material-icons">view_quilt</i> Journey
+        </a>
+      </li>
+      <li>
+        <a href="{{ site.baseurl }}/#ContactMyBot">
+          <i class="material-icons">chat_bubble</i> Contact Me
+        </a>
+      </li>
+    </ul>
 
-      <ul class="social-buttons pull-right">
-        <li>
-          <a href="https://twitter.com/rteja91" target="_blank" class="btn btn-just-icon btn-simple btn-twitter">
-            <i class="fa fa-twitter"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://in.linkedin.com/in/gangineniraviteja" target="_blank"
-             class="btn btn-just-icon btn-simple btn-linkedin">
-            <i class="fa fa-linkedin"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://in.linkedin.com/in/gangineniraviteja" target="_blank"
-             class="btn btn-just-icon btn-simple btn-github">
-            <i class="fa fa-github"></i>
-          </a>
-        </li>
-      </ul>
-      <div class="row">
-        <div class="col-lg-12">
-          <h5 class="title">{{site.description}}</h5>
-        </div>
-      </div>
+    <ul class="social-buttons pull-right">
+      <li>
+        <a href="https://twitter.com/rteja91" target="_blank" class="btn btn-just-icon btn-simple btn-twitter">
+          <i class="fa fa-twitter"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://in.linkedin.com/in/gangineniraviteja" target="_blank" class="btn btn-just-icon btn-simple btn-linkedin">
+          <i class="fa fa-linkedin"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://in.linkedin.com/in/gangineniraviteja" target="_blank" class="btn btn-just-icon btn-simple btn-github">
+          <i class="fa fa-github"></i>
+        </a>
+      </li>
+    </ul>
+  <div class="row">
+    <div class="col-lg-12">
+      <h5 class="title">{{site.description}}</h5>
     </div>
+  </div>
   </div>
 
       <div class="col-lg-12" style="background: #222; color: #ffffff; padding: 25px 0px;">
